# py-sole-uart

./: .gitattributes  .gitignore  CLAUDE.md  PROTOCOL.md  PROTOCOL_ANALYSIS.md  README.md  pyproject.toml  pytest.ini
apps/: SOLE Fitness App_1.7.08_APKPure.apk  SOLE+_4.11_APKPure.xapk
apps/sole_fitness_jadx/resources/: AndroidManifest.xml
apps/sole_fitness_jadx/resources/assets/: ShareSDK.xml  en_TermsOfService.txt  fr_FR_TermsOfService.txt  ru_RU_TermsOfService.txt  zh_CN_TermsOfService.txt  zh_TW_TermsOfService.txt
apps/sole_fitness_jadx/sources/butterknife/: ButterKnife.java  OnEditorAction.java  OnItemLongClick.java  OnLongClick.java  OnTouch.java  R.java
apps/sole_fitness_jadx/sources/kotlin/: ArrayIntrinsicsKt.java  BuilderInference.java  CharCodeJVMKt.java  CharCodeKt.java  DeepRecursiveFunction.java  DeepRecursiveKt.java  DeepRecursiveScope.java  DeepRecursiveScopeImpl.java  Deprecated.java  DeprecatedSinceKotlin.java  DeprecationLevel.java  DslMarker.java  ExceptionsKt.java  ExceptionsKt__ExceptionsKt.java  Experimental.java  ExperimentalMultiplatform.java  ExperimentalStdlibApi.java  ExperimentalUnsignedTypes.java  ExtensionFunctionType.java  Function.java  HashCodeKt.java  InitializedLazyImpl.java  KotlinNothingValueException.java  (+71 more)
apps/sole_plus_jadx/resources/: AndroidManifest.xml
ftms/: f65-cap_1.pklg  f65-cap_2.pklg
scripts/: README.md  __init__.py  compare-device-info.py  debug_passive.py  debug_traffic.py  detect-sole.py  example.py  ftms-passive-monitor.py  ftms_uart_comparison.py  hunt-serial-number.py  monitor.py  parse-btsnoop.py  parse-capture.py  parse-pklg.py  pyproject.toml  read-device-info.py  scan-advertisements.py  sole_protocol.py  uart-control-fan-test.py  uart-control-full-sequence.py  uart-control-incline-steps.py  uart-control-incline.py  uart-control-interactive.py  uart-control-startstop.py  uart-control-treadonme-sequence.py  uart-passive-active.py  uart-passive-echo.py  uart-passive-listen-all.py  uart-passive-monitor.py  uart-release-control.py  uart_control.py
src/sole_uart/: __init__.py  client.py  client_old.py  const.py  dis.py  discovery.py  ftms.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_client.py  test_discovery.py  test_models.py  test_utils.py
(+25207 files in other folders)
