[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sole-uart"
version = "0.1.0"
description = "Async Python client for Sole treadmill UART protocol over Bluetooth LE"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = [
    "bluetooth",
    "ble",
    "fitness",
    "treadmill",
    "sole",
    "uart",
    "asyncio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bleak>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sole-uart"
Repository = "https://github.com/yourusername/sole-uart"
Issues = "https://github.com/yourusername/sole-uart/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sole_uart"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
